Attach user to blob, authenticate access to blobs
